# asuno_salon_england

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  packages.txt  structure.txt
.github/workflows/: hf_sync.yml  hf_sync.yml.yml
chainlit_frontend/: .gitignore  Dockerfile  README.md  app.py  chainlit.json  pyproject.toml  requirements.txt
chainlit_frontend/src/chainlit_frontend/: __init__.py  app.py  booking_flow.py  salon_data.py
chainlit_frontend/src/chainlit_frontend/fetch_apis/: fetch_codes.py
fastapi_backend/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
fastapi_backend/src/fastapi_backend/: __init__.py  database.py  main.py  opening_hours.py  session_store.py  settings.py  utils.py
fastapi_backend/src/fastapi_backend/agents/: config_agents.py  marketing_agent.py
fastapi_backend/src/fastapi_backend/models/: booking_models.py  session_models.py
fastapi_backend/src/fastapi_backend/tools/: salon_tools.py
