[project]
name = "chainlit-frontend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "saqibmurtaza", email = "saqibmurtazakhan@gmai.com" }
]
requires-python = ">=3.13"
dependencies = [
    "chainlit==2.6.0",
    "beautifulsoup4>=4.13.5",
    "google-api-python-client>=2.167.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "openai-agents>=0.0.12",
    "supabase>=2.18.1",
    "python-dotenv",
]

[project.scripts]
chainlit-frontend = "chainlit_frontend:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
